Fix spacing around search and filter buttons
Remove blank space on packages page

--- a/static/v2/css/style.css
+++ b/static/v2/css/style.css
@@ -521,7 +521,7 @@ main, .site-header {
 
 .home-banner{
   text-align: center;
-  padding: 40px 20px
+  padding: 40px 20px 10px 20px;
 }
 
 
@@ -552,7 +552,7 @@ main, .site-header {
 
 
 .home-banner > .search-bar{
-  margin: 0 auto 24px
+  margin: 0 auto;
 }
 
 
@@ -570,7 +570,6 @@ main, .site-header {
   display: flex;
   flex-direction: column;
   max-width: 1100px;
-  margin-top: 20px;
 }
 
 .home-lists-container .more {
@@ -642,9 +641,9 @@ main, .site-header {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin: 0 0 16px;
+  margin: 16px 0;
   border: 1px solid #eee;
-  border-radius: 3px
+  border-radius: 3px;
 }
 
 
